--- a/templates/main.html
+++ b/templates/main.html
@@ -36,6 +36,11 @@
         {% endblock content %}
         <div class="push"></div>
         </div>
+        
+        {% block map %}
+            
+        {% endblock map %}
+            
         {% include 'footer.html' %}
     </body>
     {% include 'fadealert.html' %}
