--- a/templates/add_gr.html
+++ b/templates/add_gr.html
@@ -15,6 +15,8 @@
     {% include 'messages.html' %}
     <form method="post">
         {% csrf_token %}
+        <input type="text" placeholder="Entry Year" name="year"
+            class="form-control form-control-lg mb-2" required>
         <input type="text" placeholder="GR Number" name="gr_num"
             class="form-control form-control-lg mb-2 numberonly" required>
         <input type="text" placeholder="જી.આર.નં." name="gr_num_gu"
