--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -7,34 +7,19 @@
 {% endblock title %}
 {% block content %}
 <div class="container mt-3 text-center">
-    <p class="fs-2 fw-bold" style="color: {{request.session.color}};">સ્કૂલ ગેલેરી</p>
+    <p class="fs-2 fw-bold" style="color: {{request.session.color}};">શાળા ગેલેરી</p>
         <div class="row row-cols-1 row-cols-md-2 g-4">
 
         {% for gal in gallery %}
 
-            <div class="col ">
-              <div class="border h-100 border-dark border-3 p-3" style="border-radius: 20px;">
-                <div style="border-radius: 15px;background-color: {{request.session.color}};">
-                    <p class="fs-3 text-white text-center pt-2 pb-2">
+            <div class="col p-3">
+              <div class="h-100 shadow p-5" style="border-radius: 20px;background-color:{{request.session.color}}">
+                    <p class="fs-3 fw-bold text-white text-center pt-2 ">
                         {{gal.category}}
                     </p>
-                </div>  
-                <div class="row row-cols-4">
-                    {% for img in image %}
-                    
-                    {% if img.category.category == gal.category %}                        
-                      
-                    <div class="col">
-                        <img src="{{img.image.url}}" class="img-thumbnail" alt="img-thumb" width="100" height="100">
-                    </div>
-
-                    {% endif %}
-                    
-                    {% endfor %}
-                </div>
                 <form method="post">
                     {% csrf_token %}
-                    <a href="{% url 'viewgallery' gal.id %}" class="btn btn-dark  mt-3" style="border-radius: 15px;">View Gallery &nbsp;<i class="bi bi-arrows-angle-expand"></i></a>
+                    <a href="{% url 'viewgallery' gal.id %}" class="btn btn-light rounded-circle  mt-3 pt-2 pb-2 shadow mb-3"><i class="fa-solid fa-mountain-sun"></i></a>
                 </form>
               </div>
             </div>
@@ -42,4 +27,10 @@
         {% endfor %}
         </div>
 </div>
+<style>
+    .btn:hover{
+        scale: 1.5;
+        transition: 0.3s ease-out;
+    }
+</style>
 {% endblock content %}
