--- a/templates/general_register.html
+++ b/templates/general_register.html
@@ -5,14 +5,17 @@
 </title>
 {% endblock title %}
 {% block content %}
-<div class="container-fluid text-center mt-3 pt-3">
+<div class="container-fluid text-center mt-1 pt-3">
     <form method="post">
         {% csrf_token %}
+        <div class="d-flex">
+
+        </div>
         <div class="d-flex justify-content-between mb-3">
             <button type="submit" name="download" class="btn text-white pe-4
                 ps-4" style="background-color: {{request.session.color}};border-radius: 20px;"><i
                     class="bi bi-download" style="font-size: 20px;"></i></button>
-            <p class="fs-2 fw-bold" style="color: {{request.session.color}};">સામાન્ય વય પત્રક</p>
+            <p class="fs-2 fw-bold" style="color: {{request.session.color}};">General Register</p>
             <button type="submit" name="add" class="btn text-white pe-4
                 ps-4" style="background-color: {{request.session.color}};border-radius: 20px;"><i
                     class="bi bi-person-plus-fill" style="font-size: 20px;"></i></button>
@@ -20,10 +23,16 @@
     </form>
     
     <div class="p-3 shadow" style="background-color: {{request.session.color}};border-radius:15px">
+        <form method="post">
+            {% csrf_token %}
+            <div class="d-flex mb-2">
+                <input type="text" class="form-control me-2" name="year" placeholder="Filter By Year">
+                <button type="submit" class="btn btn-light" name="yearfil"><i class="bi bi-sort-numeric-down"></i></button>
+            </div>
+        </form>
         <div class="table-responsive">
-            <table class="table text-white table-bordered border-white">
+            <table class="table text-light table-bordered">
                 <thead>
-                    <input class="form-control mt-2 mb-2" type="text" id="myInput" onkeyup="myFunction()" placeholder="Search Student Name">
                     <tr>
                         <th scope="col">{{cl1}}</th>
                         <th scope="col">{{cl2}}</th>
@@ -90,27 +99,4 @@
         color: white;
     }
 </style>
-<script>
-    function myFunction() {
-      // Declare variables
-      var input, filter, table, tr, td, i, txtValue;
-      input = document.getElementById("myInput");
-      filter = input.value.toUpperCase();
-      table = document.getElementById("myTable");
-      tr = table.getElementsByTagName("tr");
-
-      // Loop through all table rows, and hide those who don't match the search query
-      for (i = 0; i < tr.length; i++) {
-        td = tr[i].getElementsByTagName("td")[0];
-        if (td) {
-          txtValue = td.textContent || td.innerText;
-          if (txtValue.toUpperCase().indexOf(filter) > -1) {
-            tr[i].style.display = "";
-          } else {
-            tr[i].style.display = "none";
-          }
-        }
-      }
-    }
-  </script>
 {% endblock content %}
